[package]
name = "claude-scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Claude Scheduler Contributors"]
description = "A web-based scheduler for Claude AI commands with Git worktree support"
repository = "https://github.com/honehaniwa/claude-schedular"
license = "MIT"
readme = "README.md"
keywords = ["claude", "scheduler", "ai", "git-worktree", "automation"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "claude-scheduler"
path = "src/main.rs"

[lib]
name = "claude_scheduler"
path = "src/lib.rs"

[dependencies]
dioxus = { version = "0.5", features = ["desktop"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
directories = "5.0"
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
comfy-table = "7.1"
csv = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"